forth/test/fail/test_too_many_output_regs_with_err.af
\ Must fail to compile.
fun: .test_too_many_output_regs_with_err_fail { -- A B C D E F G H err }
  false .then test_throw end
  0 1 2 3 4 5 6 7 nil
end
